# swagger.json
@@ -5,7 +5,7 @@
     "description": "An API to display a list images dowloaded and users created.",
     "version": "1.0.0"
   },
-  "host": "three40firstproject.onrender.com",
+  "host": "solid-computing-machine-67p9r5wv65x2r7p9-8080.app.github.dev",
   "basePath": "/",
   "schemes": [
     "https"
@@ -17,6 +17,19 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
